fix: no background on mobile

--- a/style.css
+++ b/style.css
@@ -147,12 +147,7 @@ body {
   and (max-device-width: 812px)
   and (-webkit-min-device-pixel-ratio: 3) {
   #landing {
-    background: linear-gradient(194.23deg, #6B5D6F 58.06%, #EFE2E1 90.07%);
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    overflow: hidden;
+    background: none;
   }
   #supercell {
     display: none;
